Ajustando classes com erro